Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-17550

Gecko download cannot be cancelled by keyboard

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.15
    • Setup
    • None

    Description

      0.4.15-dev-2406-g1c03bee
      In the 2nd stage setup, we can't cancel the Gecko download by keyboard.
      gecko-installer-cannot-be-cancelled-by-keyboard.png

      Attachments

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              katayama_hirofumi_mz Katayama Hirofumi MZ
              Votes:
              1 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: