[CPL][APPWIZ] Make gecko download cancellable by keyboard (#3726)

We shouldn't disable nor hide the control with focus. CORE-17550, CORE-5737